v18_修改：颜色数据集

--- a/templates/draw_page.html
+++ b/templates/draw_page.html
@@ -194,7 +194,7 @@
             div.innerHTML = `
                 <div class="stats-dot" style="background: rgb(${item.r},${item.g},${item.b})"></div>
                 <span style="flex:1"><strong>${id}</strong></span>
-                <span class="badge bg-secondary">${item.count}</span>
+                <span class="badge bg-secondary" style="margin-right: 30px;">${item.count}</span>
             `;
             container.appendChild(div);
         });
